# camtest

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/de/mopsdom/rearview/protocol/: CTPCommand.kt  CTPMessage.kt  CTPProtocol.kt  JFIFMJpegStreamReceiver.kt  RtpConvertProxy.kt
app/src/main/java/de/mopsdom/rearview/ui/: MainActivity.kt  SettingsActivity.kt
app/src/main/java/de/mopsdom/rearview/utils/: NetworkUtils.kt
app/src/main/java/local/test/camtest/: MainActivity.kt
app/src/main/java/local/test/camtest/protocol/: CTPCommand.kt  CTPMessage.kt  CTPProtocol.kt  JFIFMJpegStreamReceiver.kt  MinimalSdpServer.kt  NativeConnection.kt  RtpConvertProxy.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/res/drawable/: lines.xml  outline_hd_24.xml  outline_sd_24.xml  outline_videocam_24.xml  outline_videocam_off_24.xml
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  fragment_home.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/raw/: rts_jpeg.sdp
app/src/main/res/values/: arrays.xml  defaults.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pcap/: capture.pcap  extract_header.py  udp_headers_analysis.csv  udp_headers_detailed.txt  udp_headers_overview.txt
(+2 files in other folders)
